<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@color/backo_app"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/textos"
        android:id="@+id/blanco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:textStyle="bold"
        android:background="@color/Blanco"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/blanco">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rojo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/Rojo"
            android:gravity="center"
            android:clickable="true"
            style="@style/textos"
            android:text="@string/rojo"
            android:textColor="@color/Blanco">

        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    style="@style/textos"
                    android:id="@+id/naranja"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/Naranja"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:text="@string/naranja"
                    android:textColor="@color/Negro">

                </TextView>

                <TextView
                    android:id="@+id/amarillo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/Amarillo"
                    android:gravity="center"
                    android:clickable="true"
                    android:text="@string/amarillo"
                    style="@style/textos"
                    android:textColor="@color/Negro"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    style="@style/textos"
                    android:id="@+id/verde"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/Verde"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:text="@string/verde"
                    android:textColor="@color/Negro">

                </TextView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/cian"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/Negro"
                        android:background="@color/Cian"
                        style="@style/textos"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/cian">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/azul"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Azul"
                        android:gravity="center"
                        style="@style/textos"
                        android:clickable="true"
                        android:textColor="@color/Blanco"
                        android:text="@string/azul"
                        android:layout_weight="1">
                    </TextView>
                    <TextView
                        android:id="@+id/violeta"
                        style="@style/textos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Violeta"
                        android:textColor="@color/Blanco"
                        android:clickable="true"
                        android:gravity="center"

                        android:text="@string/violeta"
                        android:layout_weight="1">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gris"
                style="@style/textos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/Blanco"
                android:background="@color/Gris"
                android:text="@string/gris">

            </TextView>

            <TextView
                android:id="@+id/negro"
                style="@style/textos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/Blanco"
                android:text="@string/negro"
                android:background="@color/Negro">

            </TextView>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>